	* Add a way to reset Ecore_Thread internal pipe after a fork via ecore_fork_reset.

2012-08-13  Carsten Haitzler (The Rasterman)

        * Fix ecore fork reset function to allow for callbacks to be
          attached so ecore-evas can reset evas async fd on fork.

2012-08-13  Vincent Torri

        * Fix segmentation fault when fd_set pointers are NULL on Windows

2012-08-18  Carsten Haitzler (The Rasterman)

        * Add xkb change events patch from trac.

2012-08-27  Carsten Haitzler (The Rasterman)

        * Add ecore_x custom blanker screensaver enable/disable - cant
          do e17 properly without so add in even in freeze.

2012-08-27  Vincent Torri

        * Fix segmentation fault in ecore_thread on Windows as PHS
	  was returning a wrong value.

2012-08-29  Cedric Bail

	* Always call evas_render_update_free to prevent leak in Ecore_Evas X backend.

2012-08-29  Mike Blumenkrantz

        * Fix leak in ecore_ipc servers

2012-08-29  Christopher Michael

        * Add Copy-N-Paste support for Ecore_Wayland.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Cedric Bail

	* Add Ecore_Con_Eet API to help using Eet_Data with Ecore_Con

2012-09-03  Shinwoo Kim (kimcinoo)

       * Add ecore_x illume access messages:
         ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_UP
         ECORE_X_ATOM_E_ILLUME_ACCESS_ACTION_DOWN

2012-09-04  Jihoon Kim (jihoon)

       * Add ECORE_IMF_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN

2012-09-05  Mike Blumenkrantz

       * Fix crash that could occur in ecore_con_ssl with privkeys and certificates on failure

2012-09-06  Mike Blumenkrantz

       * Fix race condition in ecore-con where events could sometimes be sent for freed clients
       * Fix ssl servers using openssl
       * Fix ssl connections overall

2012-09-07  Christopher Michael

       * Fix ecore_x_randr to actually return outputs properly.

2012-09-08  Vincent Torri

       * Fix readlink usage in ecore_file.