@@ -12,6 +12,7 @@ Additions:
      - Fix ecore_x_randr functions to work properly.
     * ecore_imf:
      - Add ECORE_IMF_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN
+     - Add ECORE_IMF_PREEDIT_TYPE_SUB4~7 style
 
 Fixes:
 
